--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "public": {
     "default": {
-      "commerce-core-endpoint": "https://www.aemshop.net/graphql",
-      "commerce-endpoint": "https://www.aemshop.net/cs-graphql",
+      "commerce-core-endpoint": "https://na1-sandbox.api.commerce.adobe.com/KEyyV161PdUyTs77ZcnTdn/graphql",
+      "commerce-endpoint": "https://na1-sandbox.api.commerce.adobe.com/KEyyV161PdUyTs77ZcnTdn/graphqll",
       "headers": {
         "cs": {
           "Magento-Customer-Group": "b6589fc6ab0dc82cf12099d1c2d40ab994e8410c",
